--- a/Daily_UI_Challenge_001/style.css
+++ b/Daily_UI_Challenge_001/style.css
@@ -3,7 +3,7 @@
  }
 .card{
     display: flex;
-    height: 60vh;
+    height: auto;
     width: 25%;
     /* background-color: white; */
     /* border-radius: 10px; */
@@ -18,7 +18,7 @@
 
 @media only screen and (max-width: 1200px) and (min-width: 1000px){
     .card {
-        height: 60vh;
+        height: auto;
         width: 30%;
         margin-left: 35%;
     }
@@ -26,7 +26,7 @@
 
 @media only screen and (max-width: 999px) and (min-width: 900px){
     .card {
-        height: 60vh;
+        height: auto;
         width: 30%;
         margin-left: 30%;
     }
@@ -34,14 +34,14 @@
 
 @media only screen and (max-width: 899px){
     .card {
-        height: 60vh;
+        height: auto;
         width: 35%;
         margin-left: 25%;
     }
 }
 @media only screen and (max-width: 500px){
     .card {
-        height: 60vh;
+        height: auto;
         width: 80%;
         margin-left: 10%;
     }
